fixed clickable glitches e.g. being able to expand and collapse in desktop view

--- a/css/layout.css
+++ b/css/layout.css
@@ -367,6 +367,7 @@ li{
         top: 0;
         left: 0px;
         width: 100%;
+        max-height: 45px;
     }
     .nav{
         max-width: 992px;
@@ -407,7 +408,8 @@ li{
 
     .aside-left{
         width: 23%;
-        height: auto;
+        height: 700px;
+        max-height: 100%;
         float: left;
     }
 
@@ -424,6 +426,8 @@ li{
     .aside-right{
         width: 23%;
         float: right;
+        max-height: 100%;
+        height:700px
     }
 
     .aside-heading{
@@ -460,6 +464,9 @@ li{
     .header-right{
         text-align: right;
     }
+    .nav-wrapper{
+        max-height: 45px;
+    }
     .nav{
         max-width: 1002px;
         margin: 0 auto;
@@ -468,6 +475,15 @@ li{
         max-width: 1002px;
         margin: 0 auto;
     }
+    .aside-left{
+        max-height: 100%;
+        height: 700px;
+    }
+    .aside-right{
+        max-height:100%;
+        height: 700px;
+    }
+
     .footer{
         max-width: 1002px;
         margin: 0 auto;
